# mykavabar-backend

./: .gitignore  Cargo.toml  README.md  Rocket.toml
src/: dbrecord.rs  devcli.rs  error.rs  generic.rs  jobs.rs  main.rs  test_init.rs  web.rs
src/models/: establishment.rs  event.rs  image.rs  mod.rs  review.rs  session.rs  staff.rs  staff_permission.rs  staff_schedule_entry.rs  user.rs
src/routes/: bootstrap_admin.rs  check_token.rs  establishment.rs  events.rs  mod.rs  openapi.rs  staff.rs  token.rs  users.rs
src/routes/pages/: admin.rs
tls/: .keep
