[package]
name = "mykavabar-backend"
version = "0.1.0"
authors = ["Jason <jason@elg.gg>"]
edition = "2021"
repository = "https://github.com/MyKavaBarLLC/mykavabar-backend"

[dependencies]
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend", "cache", "http", "framework", "standard_framework"], version = "0.12.4"}
serde = "1.0.219"
serde_json = "1.0.140"
chrono = "0.4.40"
surrealdb = "2.2.1"
confy = "0.6.1"
password-hash = "0.5.0"
argon2 = "0.5.3"
async-trait = "0.1.88"
rocket = { version = "0.5.1", features = ["tls", "json"] }
rand = "0.8.5" # Do not upgrade: other deps still depend on rand 0.8.x; using 0.9.x causes trait conflicts
rand_core = { version = "0.9.3", features = ["std"] }
jsonwebtoken = "9.3.1"
env_logger = "0.11.7"
log = "0.4.26"
reqwest = { version = "0.12.15", features = ["json"] }
strum = { version = "0.27.1", features = ["derive"] }
surreal_socket = { path = "../surrealsocket" }
rustyline = "15.0.0"
utoipa = "5.3.1"
utoipa-rapidoc = "6.0.0"
