[package]
name = "mykavabar-backend"
version = "0.1.5"
authors = ["Jason <jason@elg.gg>"]
edition = "2021"
repository = "https://github.com/MyKavaBarLLC/mykavabar-backend"

[dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend", "cache", "http", "framework", "standard_framework"], version = "0.12.4"}
serde = "1.0.228"
serde_json = "1.0.145"
chrono = "0.4.42"
surrealdb = "2.2.1"
confy = "1.0.0"
password-hash = "0.5.0"
argon2 = "0.5.3"
async-trait = "0.1.89"
rocket = { version = "0.5.1", features = ["tls", "json"] }
rand = "0.8.5" # Do not upgrade: other deps still depend on rand 0.8.x; using 0.9.x causes trait conflicts
rand_core = { version = "0.9.3", features = ["std"] }
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
env_logger = "0.11.8"
log = "0.4.28"
reqwest = { version = "0.12.23", features = ["json"] }
strum = { version = "0.27.2", features = ["derive"] }
surreal_socket = { path = "../surrealsocket" }
rustyline = "17.0.2"
utoipa = { version = "5.4.0", features = ["chrono"] }
utoipa-rapidoc = "6.0.0"
futures = "0.3.31"
subtle = "2.6"
email_address = "0.2.9"
fuzzy-matcher = "0.3.7"
